--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <title>
         GIP
     </title>
-    
+
 </head>    
 <body>
-    <h1>guided incident processing</h1>
+    <h1>Guided Incident Processing</h1>
 
 </body>    
 </html>
